[tool.poetry]
name = "pybites-faker"
version = "0.1.0"
description = ""
authors = ["Bob Belderbos <bobbelderbos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^8.2.1"
feedparser = "^6.0.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.23.1"
pytest-cov = "^2.12.0"

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
